# pg-flux

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  cmd.out  cov.out  db.out  differ.out  exec.out  go.mod  go.sum  install.sh  package.json  sch3.out  schema.out  schema2.out  src.out  src2.out  src3.out
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  matrix.yml  release.yml  test.yml
apps/cli/: .golangci.yml  go.mod  go.sum
apps/web/: package.json  tsconfig.json
cmd/pg-flux/: main.go  main_embedded_test.go  main_test.go  main_unit_test.go
docs/: benchmarks.md  parser-limitations.md
docs/prd/: 03-technical-architecture.md  04-functional-requirements.md  09-risk-analysis.md  10-testing-strategy.md  12-security-considerations.md  PRD-v2-robustness.md  README.md
docs/production/: 05-schema-authoring.md  (+4 more)
examples/rust-hrm/: .env.example  .pg-flux.yml  Cargo.toml  JOURNEY.md  README.md
examples/rust-hrm/migrations/: 20260522_175823_071_initial_schema.sql
examples/rust-hrm/schema/: attendance.sql  audit.sql  departments.sql  domains.sql  employees.sql  extensions.sql  functions.sql  grants.sql  leave.sql  positions.sql  rls.sql  schemas.sql  shifts.sql  triggers.sql  types.sql  views.sql
examples/rust-hrm/src/: db.rs  main.rs
examples/rust-hrm/src/handlers/: departments.rs  employees.rs  mod.rs  shifts.rs
scripts/: ci.sh  coverage-nfr.sh  manual-smoke.sh
(+730 files in other folders)
