[package]
name = "rust-hrm"
version = "0.1.0"
edition = "2021"
description = "pg-flux example: multi-tenant HRM in Rust (Actix-web + sqlx)"

[[bin]]
name = "rust-hrm"
path = "src/main.rs"

[dependencies]
actix-web  = "4"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1",  features = ["derive"] }
serde_json = "1"
uuid       = { version = "1",  features = ["v4", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }
dotenvy    = "0.15"
